address bar on mobile - fix 2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,10 @@
 
 @layer utilities {
     html, body {
-        min-height: 100% !important;
+        /*min-height: 100% !important;*/
+        height: 100%;
         box-sizing: border-box;
-        overflow-x: hidden;
+        /*overflow-x: hidden;*/
         scroll-behavior: smooth;
     }
 
